Fix halos around strokes in "Inherit Alpha" layers with transparency

When a layer is applied in inherit alpha mode, then the blending should
happen only via source alpha value. Destination alpha should not be mixed
into it, because it will create halos around the shapes. Conceptually,
it works as if the backdrop alpha value were zero.

BUG:424797